# dbf-utils

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: build_database.py  export_jis_mapping.py  import_generic_dbf.py  import_gis_map.py  import_n03.py  import_r2ka.py
app/estat/: export_jis_mapping.py  import_r2ka.py
dev/: N03-20240101_01.dbf  N03-20240101_33.dbf  README.md  r2ka11.dbf
doc/: R2KA_database_spec.md  README.md
doc/estat/: README.md
doc/gis_map/: GIS_map_database_spec.md  README.md
estat_shp_utils/: __init__.py  csv_to_sqlite.py  r2ka_api.py  r2ka_importer.py
sample/: lookup_city.py  lookup_sub_area.py  read_cities.py
src/: database.py  r2ka_api.py  r2ka_importer.py
src/dbf_utils/: __init__.py  database.py  dbf.py
src/dbf_utils/gis_map/: __init__.py  gis_map_importer.py
src/dbf_utils/n03/: __init__.py  n03_importer.py
src/dbf_utils/r2ka/: __init__.py  r2ka_api.py  r2ka_importer.py
tests/: test_api.py  test_gis_map.py  test_importer.py  test_n03.py
tests/estat/: test_api.py  test_importer.py
