[project]
name = "dbf-utils"
version = "0.0.0"
description = "Utilities for converting CSV/DBF files to normalized SQLite databases"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
dependencies = [
    "pandas",
    "dbfread",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbf_utils*"]
